fix: 🐛 session list spacing on mobile

--- a/src/components/sessionsList/sessionsList.styles.scss
+++ b/src/components/sessionsList/sessionsList.styles.scss
@@ -32,12 +32,13 @@ $headerHeight: 80px;
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
-		padding: $grid-base-three;
+		padding: $grid-base-three $grid-base-two;
 		background-color: $background-light-ochre;
 		z-index: 15;
 
 		@include breakpoint($fromLarge) {
 			position: static;
+			padding: $grid-base-three;
 		}
 	}
 
@@ -110,17 +111,19 @@ $headerHeight: 80px;
 
 	&__scrollContainer {
 		height: calc(100% - 152px);
-		margin-top: 80px;
+		margin-top: $grid-base-ten;
+		padding-top: $grid-base-three;
 		overflow: auto;
 
 		@include breakpoint($fromLarge) {
 			height: 100%;
 			margin-top: 0;
+			padding-top: 0;
 			position: relative;
 		}
 
 		&--hasFilter {
-			padding-top: 80px;
+			padding-top: 82px;
 		}
 	}
 
